メモリオプションを変更 refs #4